--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <my-app>Loading...</my-app>
+    <my-app>
+    	<div style="font-size: 50px; margin-top: 200px; text-align: center;">
+    		Loading........
+    	</div>
+    </my-app>
   </body>
 </html>
